src/App.css
@import url('https://fonts.googleapis.com/css?family=Amatic+SC:400,700|Josefin+Slab:400,600,700,800|Rock+Salt|Limelight|Special+Elite|Raleway|Montserrat:400,600,700,800|Aguafina+Script|Cutive|Sarina&display=swap');

@font-face {
    font-family: 'coco_gothicregular';
    src: url('assets/webfontkit/coco-gothic-regular-trial-webfont.woff2') format('woff2'),
         url('assets/webfontkit/coco-gothic-regular-trial-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}
@font-face {
    font-family: 'portrait_scriptregular';
    src: url('assets/webfontkit/portraitscript-regular-webfont.woff2') format('woff2'),
         url('assets/webfontkit/portraitscript-regular-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}

@font-face {
    font-family: 'portrait_scriptalts_-_bold';
    src: url('assets/webfontkit/portraitscript-alts-bold-webfont.woff2') format('woff2'),
         url('assets/webfontkit/portraitscript-alts-bold-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}

@font-face {
    font-family: 'portrait_scriptalts';
    src: url('assets/webfontkit/portraitscript-alts-webfont.woff2') format('woff2'),
         url('assets/webfontkit/portraitscript-alts-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'portrait_scriptbold';
    src: url('assets/webfontkit/portraitscript-bold-webfont.woff2') format('woff2'),
         url('assets/webfontkit/portraitscript-bold-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}

@font-face {
    font-family: 'portrait_scriptbounce_-_bold';
    src: url('assets/webfontkit/portraitscript-bounce-bold-webfont.woff2') format('woff2'),
         url('assets/webfontkit/portraitscript-bounce-bold-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}

@font-face {
    font-family: 'portrait_scriptbounce';
    src: url('assets/webfontkit/portraitscript-bounce-webfont.woff2') format('woff2'),
         url('assets/webfontkit/portraitscript-bounce-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal
}

article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary{display:block;}audio,canvas,video{display:inline-block;}audio:not([controls]){display:none;height:0;}[hidden]{display:none;}html{font-family:sans-serif;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;}a:focus{outline:thin dotted;}a:active,a:hover{outline:0;}h1{font-size:2em;}abbr[title]{border-bottom:1px dotted;}b,strong{font-weight:700;}dfn{font-style:italic;}mark{background:#ff0;color:#000;}code,kbd,pre,samp{font-family:monospace, serif;font-size:1em;}pre{white-space:pre-wrap;word-wrap:break-word;}q{quotes:\201C \201D \2018 \2019;}small{font-size:80%;}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline;}sup{top:-.5em;}sub{bottom:-.25em;}img{border:0;}svg:not(:root){overflow:hidden;}fieldset{border:1px solid silver;margin:0 2px;padding:.35em .625em .75em;}button,input,select,textarea{font-family:inherit;font-size:100%;margin:0;}button,input{line-height:normal;}button,html input[type=button],/* 1 */input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}button[disabled],input[disabled]{cursor:default;}input[type=checkbox],input[type=radio]{box-sizing:border-box;padding:0;}input[type=search]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box;}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none;}textarea{overflow:auto;vertical-align:top;}table{border-collapse:collapse;border-spacing:0;}body,figure{margin:0;}legend,button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0;}

.clearfix:after {visibility: hidden; display: block; font-size: 0; content: ''; clear: both; height: 0; }

* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }

.visuallyHidden:not(:focus):not(:active) { position: absolute; width: 1px; height: 1px; margin: -1px;border: 0;padding: 0;white-space: nowrap;clip-path: inset(100%);clip: rect(00 0 0);overflow: hidden;}

.wrapper {
    width: 95%;
    margin: 0 auto;
}

.header-container {
    background-image: url(assets/img-1.jpg);
    background-size: 50%;
    height: 100vh;
    background-position: 80%;
    border: 3px solid black;
    background-repeat: no-repeat;
    background-color: #F2F2F2;
}

.scroll-note {
    padding-left: 3%;
    font-family: 'Josefin Slab', serif;
    font-weight: 700;
    font-size: 1.6rem;
    letter-spacing: 1.5px;
    position: absolute;
    bottom: 0;
    left: 0;
    color: black;
}

.scroll-note span {
    font-size: 1rem;
    color: #96D7C8;
}

.header {
    width: 45%;
    margin-top: 8%;
    height: 35vh;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    margin-left: 3%;
    transform: rotate(-15deg);
    font-size: 2.5rem;
}

.header img {
    width: 23%;
    padding-top: 3%;
    max-width: 100%;
}
.header-title {
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 80%;
}

.header-title img {
    width: 80%;
    margin: 0 auto;
    padding-top: 0;
    display: block;
}

h1 {
    text-align: center;
    font-family: 'portrait_scriptbounce_-_bold';
    line-height: 1.5;
    font-size: 5.8vw;
    margin: 0;
    letter-spacing: 2px;
    color: black;
}

h2 {
    font-family: 'Sarina', cursive;
    margin-top: 1%;
    font-size: 2vw;
    text-align: center;
    color: #BBCFC6;
    text-shadow: 3px 2px black;
}


.main-container {
    background-color:#BED8CD;
    overflow: hidden;
}

.form-description {
    padding-top: 4%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    
}

.form-description img {
    width: 30%;
}

.form-description p {
    font-family: 'Josefin Slab', serif;
    font-weight: 600;
    font-size: 1.5rem;
    margin: 0;
    margin-bottom: 10px;
    text-align: center;
}

form {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 3% 0;
}

.form input {
    height: 40px;
    width: 550px;
    text-align: center;
    font-size: 1.7rem;
    margin-bottom: 1%;
    font-family: 'Limelight', cursive;
}

.form button {
    width: 150px;
    font-size: 1.5rem;
    margin: 8px 5px;
    border-radius: 10px;
    font-family: 'Josefin Slab', serif;
    font-weight: 600;
}

.display {
    display: flex;
    background-color: #9EBED0;
    width: 100%;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: space-around;
    padding-top: 2%;
    border-top: 2px dotted black;
}

p.movie-name {
    height: 90px;
}
.movie p {
    font-family: 'Cutive', sans-serif;
    font-size: 1.5rem; 
    max-width: 100%;
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    text-align: center;
    justify-content: center;
    align-items: center;
    margin: 0 auto;
    height: 50px;
}

.poster img {
    max-width: 100%;
    border: 6px solid white;
    max-height: 600px;
    max-width: 350px;
    height: 500px;
}

.movie {
    text-align: center;
    height: 750px;
    width: 375px;
    padding: 5%;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    margin-bottom: 4%;
}

p.dog {
    font-family: 'Montserrat', cursive;
    font-size: 0.9rem;
    font-weight: 700;
    color: grey;
    letter-spacing: 1px;
    background-color: white;
    line-height: 1.2;
    margin: 0;
    border: 2px solid black;
}

.scroll-here {
    font-family: 'Josefin Slab', serif;
    font-weight: 600;
    font-size: 1rem;
    text-align: center;
    text-transform: uppercase;
}


.section-contain {
    text-align: center;
    width: 100%;
}

.section-contain p {
    font-family: 'Josefin Slab', cursive;
    font-weight: 600;
    font-size: 2rem;
    padding-bottom: 3%;
    letter-spacing: 2px;
}

@media (max-width: 1000px) {
    h1 {
        font-size: 4rem;
    }

    h2 {
        font-size: 1.5rem;
    }
}

@media (max-width: 800px) {
    .header-container {
        background-position: 50% 80%;
        background-size: 55%;
    }

    .header {
        text-align: center;
        width: 100%;
        margin-left: 0;
    }
}

@media (max-width: 600px) {
    .header-container {
        background-size: 70%;
    }
}

@media (max-width: 470px) {
    .header-container {
        background-size: 95%;
    }

    h1 {
        font-size: 3.3rem;
    }

    .scroll-note {
        font-size: 1.2rem;
    }
}

@media (max-width: 384px) {
    .header-container {
        background-size: 95%;
    } 
}

